[gd_scene load_steps=10 format=3 uid="uid://b7p0b5ygo11sp"]

[ext_resource type="Script" path="res://world/facility/camera.gd" id="1"]
[ext_resource type="Script" path="res://world/facility/selection_tool.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://bajp3j6f4oml6" path="res://world/facility/facility_1.png" id="3"]
[ext_resource type="Script" path="res://world/facility/facility.gd" id="4"]
[ext_resource type="PackedScene" path="res://world/unit/unit.tscn" id="5"]

[sub_resource type="RectangleShape2D" id="1"]

[sub_resource type="SegmentShape2D" id="2"]
a = Vector2(2801, 150)
b = Vector2(-2802, 136)

[sub_resource type="SegmentShape2D" id="3"]
a = Vector2(2810, -368)
b = Vector2(698, -359)

[sub_resource type="SegmentShape2D" id="4"]
a = Vector2(698, -356)
b = Vector2(207, 143)

[node name="facility" type="Node2D"]
script = ExtResource( "4" )

[node name="background" type="Sprite2D" parent="."]
position = Vector2(-8, 6.00006)
texture = ExtResource( "3" )

[node name="selection_tool" type="Area2D" parent="." groups=["selection"]]
script = ExtResource( "2" )

[node name="selection_hitbox" type="CollisionShape2D" parent="selection_tool"]
shape = SubResource( "1" )

[node name="selection_outline" type="Line2D" parent="selection_tool"]
visible = false
points = PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
width = 2.0

[node name="camera" type="Camera2D" parent="."]
current = true
script = ExtResource( "1" )

[node name="rail" type="Area2D" parent="." groups=["rail"]]

[node name="basic_rail" type="CollisionShape2D" parent="rail"]
shape = SubResource( "2" )

[node name="basic_rail_2" type="CollisionShape2D" parent="rail"]
shape = SubResource( "3" )

[node name="basic_rail_3" type="CollisionShape2D" parent="rail"]
shape = SubResource( "4" )

[node name="unit" parent="." instance=ExtResource( "5" )]
position = Vector2(2389, -3)

[connection signal="area_entered" from="selection_tool" to="selection_tool" method="_on_selection_tool_area_entered"]
